# npu_ir

./: .gitignore  CMakeLists.txt  README.md  build.sh  push_run.sh
jni/: Android.mk  check.h  test_arch29_with_0copy.cpp  test_contains_npu.cpp  test_load_om.cpp  test_single_op.cpp  test_support_resizeBilinear.cpp  test_util.h
libs/arm64-v8a/: test
